[Fix]: Changed li text-align to right

--- a/css/styles.css
+++ b/css/styles.css
@@ -1762,6 +1762,7 @@ input, select, textarea {
 		    padding-left: 0.25em;
 		    color: #000000;
 		    font-size: 18px;
+		    text-align: right;
 		}
 
 	ol {
